--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two");
 * {
   box-sizing: border-box;
 }
@@ -52,20 +53,66 @@ table {
   border-spacing: 0;
 }
 
-.container {
-  width: 100%;
-  height: 90vh;
-  border: 1px solid red;
-  display: flex;
-  justify-content: space-around;
+.main_container {
+  height: 100vh;
+  padding: 0;
 }
 
-.container ul {
-  border: 1px solid blue;
+.main_container:before {
+  content: "";
+  position: fixed;
+  width: 200%;
+  height: 200%;
+  top: -50%;
+  left: -50%;
+  z-index: -1;
+  background: url("../images/main_background.png") top left/25px repeat white;
+  -webkit-transform: rotate(30deg);
+  -moz-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  -o-transform: rotate(30deg);
+  transform: rotate(30deg);
+  opacity: 0.5;
+}
+
+.main_container nav#menu {
+  height: 8vh;
+  background-color: lightgrey;
+}
+
+.main_container section#setlist {
+  font-family: "Shadows Into Light Two";
+  font-size: 1.5em;
+  height: 88vh;
+  padding: 30px;
+}
+
+.main_container section#generator {
+  position: fixed;
+  bottom: 4vh;
+  height: 4vh;
+  background-color: powderblue;
+}
+
+.main_container footer {
+  height: 4vh;
+  text-align: center;
+  background-color: lightsalmon;
 }
 
 button#generateSetList {
-  height: 10vh;
-  width: 100%;
   text-align: center;
+}
+
+div.sidebar {
+  position: absolute;
+  top: 0;
+  left: -55vw;
+  width: 60vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+div.sidebar:hover {
+  left: -50vw;
 }
