--- a/css/style.scss
+++ b/css/style.scss
@@ -1,87 +1,58 @@
 // SASS TO SAVE
 @import '_reset.scss';
 @import 'buttons.scss';
+@import 'animate.css';
 
 // TYMCZASOWO:
 @import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
+$tablet: '768px';
 
-$basic_1: red;
+$basic_1: #eeeeee;
 $basic_2: black;
+$buttons: rgba(255,255,255,.7);
+$transpLight: rgba(238,238,238,.5);
 
 $main_font: 'Shadows Into Light Two';
 $setlist_font: ;
 
-@mixin bgImage {
-   &:before {
-      content: "";
-      position: fixed;
-      width: 200%;
-      height: 200%;
-      top: -50%;
-      left: -50%;
-      z-index: -1;
-      background: url('../images/main_background.png') top left / 25px repeat white;
-      -webkit-transform: rotate(-40deg);
-      -moz-transform: rotate(-40deg);
-      -ms-transform: rotate(-40deg);
-      -o-transform: rotate(-40deg);
-      transform: rotate(-40deg);
-      opacity: 0.3;
-   }
-}
-
 // BASIC SECTIONS SIZES
 .main_container {
-   @include bgImage;
-   height: 100vh;
+   background: url('../images/back.jpg') center center / cover no-repeat;
    padding: 0;
+   min-height:97vh;
+
+   position:relative;
+   display: flex;
+   flex-flow: column nowrap;
+   justify-content: center;
+   align-items: center;
+
 
    nav#menu {
+      position: fixed;
+      top:0;
       height: 8vh;
-      background-color: lightgrey;
+      background-color: $basic_1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       min-height: 40px;
       width: 100vw;
 
    }
 
-   section.setlist_container {
-      font-family: $main_font;
-      font-size: 1.5em;
-      height: 88vh;
-      // padding: 30px 30px 30px 80px;
-      padding: 10px 30px;
-      display: flex;
-      justify-content: center;
-
-
-      .setlist {
-         max-width:100%;
-         height: 100%;
-         overflow-y: auto;
-         .description {
-            width: 100%;
-            font-size: 0.8em;
-            display: flex;
-            justify-content: center;
-            p{
-               width: 90vw;
-
-            }
-         }
-      }
-
-   }
-
    section#generator {
+      font-family: "Roboto";
       padding: 2px;
       width: 100vw;
       position: fixed;
       bottom: -14vh;
       height: 20vh;
       min-height: 30px;
-      background-color: #373a47;
+      background-color: $basic_1;
 
       min-height: 28px;
    }
@@ -95,37 +66,98 @@ $setlist_font: ;
 
       height: 4vh;
       text-align: center;
-      background-color: lightsalmon;
+      background-color: $basic_1;
    }
 }
 
 // SETLIST:
 
-.setlist_container {
+section.setlist_container {
+   font-family: $main_font;
+   font-size: 1.5em;
+   max-width:95%;
+   min-height: 80vh;
+   padding: 4% 40px 5% 30px;
+   margin-top: 11vh;
+   margin-bottom:6vh;
+   background-color: transparent;
 
+   display: flex;
+   flex-flow: column nowrap;
+   align-items: flex-start;
+   // justify-content: center;
+   overflow-y: auto;
+
+   @media (min-width: $tablet) {
+      flex-flow: row nowrap;
+      justify-content: center;
+      padding: 2% 50px 50px 50px;
+      align-items: center;
+   }
+
+   @media (min-width: 400px){
+      min-width:355px;
+   }
+
+   ul{
+
+      padding-left:20px;
+      padding-top:30px;
+      @media (min-width: $tablet) {
+         padding-right: 20px;
+      }
+   }
 }
+
+.description {
+   min-height: 69vh;
+   width: 100%;
+   font-size: 0.8em;
+   line-height: 1.4;
+   text-align: left;
+
+   display: flex;
+   flex-flow: column nowrap;
+   justify-content: center;
+   align-items: center;
+
+   @media( min-width: 360px){
+      text-align: justify;
+   }
+
+   div.generator_logo {
+      width: 150px;
+      height: 150px;
+      margin-top:15px;
+      margin-bottom: 30px;
+      background: url('../images/generator_logo.png') center center / contain no-repeat;
+   }
+   p{
+      font-size: 0.92em;
+      display: none;
+      @media(min-width: 400px){
+         display:block;
+      }
+      max-width: 95vw;
+      @media( min-width: $tablet) {
+         width: 640px;
+
+      }
+   }
+}
+
 
 hr {
    height: 3px;
 }
 
 // GENERATOR
-.buttons {
-   display: flex;
-   justify-content: center;
-
-   button#toggleGenerator {
-      width: 20%;
-      height: 35px;
-   }
-
-   button#generateSetList {
-      width: 80%;
-      text-align: center;
-      height: 35px;
-
+form {
+   select {
+      border-radius: 15px;
    }
 }
+
 
 form#parameters {
    display: flex;
@@ -141,20 +173,85 @@ form#parameters {
    }
 }
 
+div.generator_buttons {
+   display: flex;
+   justify-content: center;
+}
+// BUTTONS
+
+button {
+   background-color: $buttons;
+   border-radius: 15px;
+   border: 1px solid black;
+}
+
+button#toggle_songDatabase {
+   height: 35px;
+   width: 250px;
+}
+
+button#toggleGenerator {
+   width: 20%;
+   height: 35px;
+}
+
+button#generateSetList {
+   width: 80%;
+   text-align: center;
+   height: 35px;
+
+}
 
 // SIDEBAR
 
 div.sidebar {
    position: fixed;
+   display: flex;
+   flex-flow: row;
+   align-items: center;
+   justify-content: center;
    top:0;
-   left: -150px;
-   width: 200px;
+   left: -30vw;
+   width: 35vw;
    height: 100vh;
-   background-color: rgba(0,0,0,.5);
 
-   &:hover {
-      left:-120px;
+   background: url('../images/ptaszek_reversed.png') center center / contain no-repeat;
+   background-color: $transpLight;
+
+   ul {
+
+      background-color: white;
+      font-family: "Roboto";
+      font-size: 1.5em;
+      line-height: 1.5;
    }
 
-   display: none;
+}
+
+// SONGS DATABASE:
+
+.song_database {
+   width: 100vw;
+   height: 100vh;
+   position:fixed;
+   right: -100vw;
+   top:0;
+
+   display: flex;
+
+   justify-content: center;
+   align-items: center;
+
+   background-color: $basic_1;
+
+   .songDatabase_form_container {
+      height:80vh;
+      width: 40vw;
+   }
+
+   .database {
+      height: 100vh;
+      width: 60vw;
+      background-color: rgba(255,255,255,0.5);
+   }
 }
